--- a/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
@@ -1,73 +1,262 @@
-<div class="col-9">
+<div class="container">
+  <h1 class="text-center">Nombre de subtema</h1>
+  <div class="row">
+    <div class="col-sm">
+      <div
+        class="bg-info text-white shadow rounded text-center"
+        style="height: 40px"
+      >
+        Nombre Curso
+      </div>
+    </div>
+    <div class="col-sm">
+      <button
+        type="button "
+        (click)="openModal('#modalAgregar')"
+        class="btn btn-primary"
+      >
+        Agregar
+      </button>
+    </div>
+  </div>
+  <hr />
+  <div class="row p-2 w-100">
+    <div class="bloque mt-2">
+      <div class="titulo shadow rounded">
+        <h4>Titulo 1</h4>
+      </div>
 
-    <div class="header">
-        <h1>{{name_subtema}}</h1>
-        <div class="row">
-            <div class="col-sm-10">
-                <p></p>
+      <div class="contenido border border-top-0">
+        <div class="mt-3">
+          <!-- texto -->
+          <div></div>
+          <!-- imagen -->
+          <div></div>
+          <!-- texto input -->
+          <div></div>
+          <!-- divider -->
+          <div></div>
+        </div>
+        <hr />
+        <div class="p-1">
+          <!-- Alternativas -->
+          <div class="row">
+            <div class="col-md">
+              <div class="float-start"><b>Alternativas</b></div>
             </div>
+            <div class="col-md">
+              <div class="float-end"><b>Tipo Alternativas:</b> Alternativa</div>
+            </div>
+          </div>
 
-        </div>
-    </div>
-    <div class="col-sm-2">
-        <button style="background-color: hsl(180, 62%, 55%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
-    </div>
-    <div class="row1-container" *ngFor="let item of collection">
-        <div class="box cyan">
-            <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
-            <p>Pregunta: {{item.pregunta}}</p>
-            <p>Descripcion: {{item.descripcion}}</p>
-            <p>Alternativas: {{item.alternativas}}</p>
-            <p>Respuesta: {{item.respuesta}}</p>
-            <div class="row">
-                <div class="col-sm-2">
-                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fa fa-edit"></i></a></p>
+          <!-- alternativa alternativa -->
+          <div class="row mb-4 mt-2">
+            <div class="col-sm">
+              <div
+                class="
+                  alternativa
+                  mx-auto
+                  shadow
+                  d-flex
+                  justify-content-between
+                  p-1
+                "
+              >
+                <div>
+                  <p>alternativa 1</p>
                 </div>
-                <!-- <div class="col-sm-3">
-                <p class="card__apply" routerLink="/administrar-preguntas/{{item.id}}/{{item.subtema}}"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
-            </div> -->
-                <div class="col-sm-6">
-                    <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
+                <div
+                  class="border border-success"
+                  style="width: 30px; height: 30px"
+                >
+                  c
                 </div>
+              </div>
             </div>
+            <div class="col-sm">
+              <div class="alternativa mx-auto shadow">
+                <p>alternativa 2</p>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="alternativa mx-auto shadow">
+                <p>alternativa 3</p>
+              </div>
+            </div>
+          </div>
+          <!-- alternativa entrada -->
+          <div class="row mb-4 mt-2">
+            <div class="col-sm">
+              <div
+                class="
+                  alternativa
+                  mx-auto
+                  shadow
+                  d-flex
+                  justify-content-between
+                  p-1
+                "
+              >
+                <div
+                  class="border border-success"
+                  style="width: 30px; height: 30px"
+                >
+                  c
+                </div>
+                <div>
+                  <p>alternativa 1</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="alternativa mx-auto shadow">
+                <p>alternativa 2</p>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="alternativa mx-auto shadow">
+                <p>alternativa 3</p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
-
-
-<ng-template #content let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Crear Pregunta</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
+<!-- modal agregar -->
+<div class="modal-agregar" id="modalAgregar">
+  <div class="contenedor">
+    <div class="cabeza d-flex justify-content-between">
+      <h5>Agregar Tema</h5>
+      <div class="cerrar" (click)="closeModal('#modalAgregar')">X</div>
     </div>
-    <div class="modal-body">
-        <form>
-            <div class="form-group">
-                <form [formGroup]="managerForm">
-                    <div class="form-group">
-                        <label>Pregunta</label>
-                        <input type="text" formControlName="pregunta" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label>Descripción</label>
-                        <input type="text" formControlName="descripcion" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label>Alternativas</label>
-                        <input type="text" formControlName="alternativas" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label>Respuesta</label>
-                        <input type="text" formControlName="respuesta" class="form-control">
-                    </div>
-                </form>
+    <br />
+    <div class="cuerpo p-2">
+      <div class="row">
+        <div class="col-sm-8">
+          <label for="">Descripción:</label>
+          <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingInput" />
+            <label for="floatingInput"
+              >Ingrese la descrión de la pregunta</label
+            >
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <label for="">Tipo Pregunta</label>
+          <select class="form-select" aria-label="Default select example">
+            <option value="1">Alternativa</option>
+            <option value="2">pregunta</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <!-- elementos -->
+          <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <i class="fa fa-picture-o" aria-hidden="true"></i>
+                Imagen
+              </div>
+              <div class="border rounded pluss-elemento">
+                <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <i class="fa fa-font" aria-hidden="true"></i>
+                Texto
+              </div>
+              <div class="border rounded pluss-elemento">
+                <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <i class="fa fa-i-cursor" aria-hidden="true"></i>
+                Texto Entrada
+              </div>
+              <div class="border rounded pluss-elemento">
+                <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <div>
+                <i class="fa fa-minus-square-o" aria-hidden="true"></i>
+                División
+              </div>
+              <div class="border rounded pluss-elemento">
+                <i class="fa fa-plus fa-lg" aria-hidden="true"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-sm-9">
+          <!-- Cargado de elementos -->
+          <!-- Tipo texto -->
+          <div class="shadow p-2 d-flex justify-content-start elemento">
+            <div class="selector-elemento">
+              <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
-        </form>
+            <div class="ms-2">
+              <p>
+                Probando texto de tipo de pregunta, Probando texto de tipo de
+                pregunta, Probando texto de tipo de pregunta,
+              </p>
+            </div>
+          </div>
+          <!-- Tipo imagen -->
+          <div class="shadow p-2 d-flex justify-content-start elemento">
+            <div class="selector-elemento">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="ms-2">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSniRVcVZGAffyQB8LT7dMF-Izs2A9Qs78Ptq8oqEhXxPJOcYVnn95se9P47UBtPx72Fqw&usqp=CAU"
+                alt=""
+              />
+            </div>
+          </div>
+          <!-- Tipo textoInput -->
+          <div class="shadow p-2 d-flex justify-content-start elemento">
+            <div class="selector-elemento">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="ms-2 d-flex justify-content-start ">
+              <div class="texto-entrada">
+                <p>Secuencia: 1,2,4, 5</p>
+              </div>
+              <div class="muestra-entrada d-flex justify-content-start ms-1 me-1">
+                <div
+                  class="
+                    identificador-entrada
+                    border
+                    bg-primary
+                    text-light text-center
+                  "
+                >
+                  8
+                </div>
+                <div class="espacio-entrada border"></div>
+              </div>
+              
+            </div>
+          </div>
+          <!-- Tipo divider -->
+          <div class="shadow p-2 d-flex justify-content-start elemento">
+            <div class="selector-elemento">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="ms-2 w-100">
+              <div class="divider-elemento border border-1 border-dark"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="guardar()" *ngIf="!actualizar">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="actualiza()" *ngIf="actualizar">Actualizar</button>
-    </div>
-</ng-template>
+    <hr />
+    <div class="base">botons</div>
+  </div>
+</div>
