--- a/src/app/UI/view-models/home/home.component.html
+++ b/src/app/UI/view-models/home/home.component.html
@@ -32,12 +32,12 @@
         <div class="row" style="margin-top: 10px;">
             <div class="col-6">
                 <div class="container" style="direction: rtl;" routerLink="/login/Alumno">
-                    <img data-type="Rectangle" style="margin-right: 40px; margin-top: 50px;" data-name="img_alumnos " src="./../../../../assets/alumnos.png " srcset="./../../../../assets/alumnos.png 1x ">
+                    <img data-type="Rectangle" style="margin-right: 40px; margin-top: 50px;cursor: pointer;" data-name="img_alumnos " src="./../../../../assets/alumnos.png " srcset="./../../../../assets/alumnos.png 1x ">
                 </div>
             </div>
             <div class="col-6 ">
                 <div class="container" routerLink="/login/Profesor">
-                    <img data-type="Rectangle" style="margin-left: 40px; margin-top: 50px;" data-name="img_alumnos " src="./../../../../assets/docentes.png " srcset="./../../../../assets/docentes.png 1x ">
+                    <img data-type="Rectangle" style="margin-left: 40px; margin-top: 50px; cursor: pointer;" data-name="img_alumnos " src="./../../../../assets/docentes.png " srcset="./../../../../assets/docentes.png 1x ">
                 </div>
             </div>
         </div>
