--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -45,7 +45,7 @@
         <a>Finalizar<i class="fa fa-arrow-right"></i></a></p>
 
 </div> -->
-
+<app-rpta [rpta]='rpta_modal' [rpta_si_no]='rpta_si_no' (close)=cerrarAlert($event)></app-rpta>
 <div class="container" style="max-width: none; height:100vh; padding-top: 20px; background-image: url('https://images.vexels.com/media/users/3/145252/raw/02dabb44e9ba039fe76c8f08dd67172a-lanzamiento-de-cohete-al-espacio-ilustracion.jpg'); background-repeat: no-repeat; background-size: cover;">
     <div class="header">
         <div class="container" style="margin: 20px;">
@@ -63,25 +63,25 @@
                 <div class="card-body" style="background-color: transparent;">
                     <div class="row" style="background-color: transparent;">
                         <div class="col-md-10" style="background-color: transparent;">
-                            <app-steps-preguntas [preguntas]="collection_de_preguntas_completo"></app-steps-preguntas>
+                            <app-steps-preguntas (correct)="evaluar($event)" [preguntas]="collection_de_preguntas_completo"></app-steps-preguntas>
                         </div>
                         <div class="col-md-2">
                             <div class="card border-success mb-1 cardInfo">
                                 <div class="card-body text-success text-center">
-                                    <p class="card-text">TIEMPO PASADO</p>
+                                    <p class="card-text">TIEMPO TRANSCURRIDO</p>
                                     <h3 class="card-title">{{tiempo_transcurrido}}</h3>
                                 </div>
                             </div>
                             <div class="card border-success mb-1 cardInfo">
                                 <div class="card-body text-success text-center">
                                     <p class="card-text">TOTAL CORRECTOS</p>
-                                    <h3 class="card-title">0</h3>
+                                    <h3 class="card-title">{{rpta_correcta}}</h3>
                                 </div>
                             </div>
                             <div class="card border-danger mb-1 cardInfo">
                                 <div class="card-body text-danger text-center">
                                     <p class="card-text">TOTAL INCORRECTOS</p>
-                                    <h3 class="card-title">0</h3>
+                                    <h3 class="card-title">{{rpta_incorrecta}}</h3>
                                 </div>
                             </div>
                             <div class="card border-info mb-1 cardInfo">
