--- a/src/app/UI/view-models/respuestas/steps-preguntas/steps-preguntas.component.html
+++ b/src/app/UI/view-models/respuestas/steps-preguntas/steps-preguntas.component.html
@@ -9,7 +9,7 @@
                     <div class="container" id="pregunta">
                         <div class="card-header">
                             <h5 class="card-title">{{i.pregunta}}</h5>
-                            <p class="card-text">{{i.descripcion}}</p>
+                            <p class="card-text">{{i.descripcion}} des</p>
                         </div>
                         <div class="card-body" style="text-align-last: center;">
                             <div class="container" *ngFor="let elem of i.elementos">
