--- a/src/app/UI/view-models/practicar/practicar.component.html
+++ b/src/app/UI/view-models/practicar/practicar.component.html
@@ -1,22 +1,15 @@
-<div class="container">    
-    <!-- <div class="row1-container" *ngFor="let item of collection"> -->
-    <div class="row1-container" >
-
-        <div class="box red">
-            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
-            <h2>Nombre Curso</h2>
-            <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
-            <p class="card__apply" ><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+<div class="general">
+    <div class="container cursos" style=" height: 90%; overflow-y: scroll;">
+        <div *ngFor="let item of collection">
+            <div class="row1-container">
+                <div class="box red" style="background-color: white;">
+                    <img src="{{item.imageURL}}" alt="{{item.curso}}" style="width: 10%;">
+                    <h2>{{item.curso}}</h2>
+                    <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
+                    <p class="card__apply" (click)="vertemas(item.id, item.curso)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row1-container" >
 
-        <div class="box red">
-            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
-            <h2>Nombre Curso</h2>
-            <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
-            <p class="card__apply" ><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
-        </div>
-    </div>
 </div>
-
