--- a/src/app/UI/view-models/practicar/practicar.component.scss
+++ b/src/app/UI/view-models/practicar/practicar.component.scss
@@ -160,3 +160,44 @@ a:hover::after {
 i {
     margin-left: 10px;
 }
+
+.cursos::-webkit-scrollbar {
+    width: 9px;
+}
+
+.cursos::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: orange !important;
+    border: solid 0px;
+}
+
+.cursos::-webkit-scrollbar-track {
+    background-color: transparent !important;
+    border-radius: 10px;
+}
+
+///
+.general {
+    overflow-y: scroll;
+    padding-top: 5%;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://img.freepik.com/vrije-vector/vector-illustratie-van-de-ruimte-achtergrond_29937-2633.jpg?size=626&ext=jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.general::-webkit-scrollbar {
+    width: 9px;
+}
+
+.general::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: orange !important;
+    border: solid 0px;
+}
+
+.general::-webkit-scrollbar-track {
+    background-color: transparent !important;
+    border-radius: 10px;
+}
