--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -51,10 +51,10 @@
         <div class="container" style="margin: 20px;">
             <div class="row">
                 <div class="col-10">
-                    <h1 style="color: white; font-weight: bold;">Nombre del curso</h1>
+                    <h1 style="color: white; font-weight: bold;">{{tema}}</h1>
                 </div>
                 <div class="col-2" style="align-self: center;">
-                    <button class="btn btn-danger">Salir</button>
+                    <button class="btn btn-danger" (click)="retroceder()">Salir</button>
                 </div>
             </div>
         </div>
@@ -95,6 +95,5 @@
                 </div>
             </div>
         </div>
-        <button (click)="guardar()">AS</button>
     </div>
 </div>
