--- a/src/app/UI/view-models/inicio/inicio.component.scss
+++ b/src/app/UI/view-models/inicio/inicio.component.scss
@@ -189,3 +189,12 @@ i {
     background-color: transparent !important;
     border-radius: 10px;
 }
+
+.general_inicio {
+    height: 100vh;
+    background-image: url(../../../../assets/home-alumno.png);
+    background-repeat: repeat;
+    background-size: 100% 100%;
+    background-position-x: -15vw;
+    background-position-y: 0vw;
+}
