--- a/src/app/UI/view-models/practicar/practicar.component.html
+++ b/src/app/UI/view-models/practicar/practicar.component.html
@@ -1,5 +1,5 @@
 <div class="general">
-    <div class="container cursos" style=" height: 90%; overflow-y: scroll;">
+    <div class="container cursos">
         <div *ngFor="let item of collection">
             <div class="row1-container">
                 <div class="box red" style="background-color: white;">
