--- a/src/app/UI/view-models/cursos/cursos.component.html
+++ b/src/app/UI/view-models/cursos/cursos.component.html
@@ -8,7 +8,7 @@
         <div class="box red">
             <img src="{{item.imageURL}}" alt="{{item.curso}}" style="width: 10%;">
             <h2>{{item.curso}}</h2>
-            <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+            <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
         </div>
     </div>
 </div>
