--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -1,4 +1,4 @@
-<div class="col-9">
+<div class="col-12">
 
     <div class="header">
         <h1>{{name_curso}}</h1>
@@ -6,7 +6,7 @@
             <div class="col-sm-10">
             </div>
             <div class="col-sm-2">
-                <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+                <button *ngIf="type_user!='Alumno'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
             </div>
         </div>
     </div>
@@ -16,11 +16,11 @@
             <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
             <h2>{{item.tema}}</h2>
             <div class="row">
-                <div *ngIf="type_user!='Estudiante'" class="col-sm-2">
+                <div *ngIf="type_user!='Alumno'" class="col-sm-2">
                     <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i style="margin-left: 10px;" class="fa fa-edit" ></i></a></p>
                 </div>
                 <div class="col-sm-3">
-                    <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i style="margin-left: 10px;" class="fa fa-eye" ></i></a></p>
+                    <p class="card__apply" (click)="navigate(item.id, item.tema, item.orden)"><a>Ver los subtemas<i style="margin-left: 10px;" class="fa fa-eye" ></i></a></p>
                 </div>
                 <!-- <div class="col-sm-6">
                 <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
