--- a/src/app/UI/view-models/practicar-temas/practicar-temas.component.html
+++ b/src/app/UI/view-models/practicar-temas/practicar-temas.component.html
@@ -21,8 +21,8 @@
                             <h6 class="card-subtitle mb-2 text-muted">ULTIMO PUNTAJE {{itema.puntaje}}/20</h6>
                         </div>
                         <div class="card-footer bg-transparent ">
-                            <button (click)="practicar('aprender', itema.id, itema.subtema)" class="aprender"><i class="fa fa-edit"></i>Aprender</button>
-                            <button (click)="practicar('reforzar', itema.id, itema.subtema)" class="reforzar"><i class="fa fa-edit"></i>Reforzar</button>
+                            <button (click)="practicar('aprender', itema.id, itema.tema)" class="aprender"><i class="fa fa-edit"></i>Aprender</button>
+                            <button (click)="practicar('reforzar', itema.id,itema.tema)" class="reforzar"><i class="fa fa-edit"></i>Reforzar</button>
                         </div>
                     </div>
                 </div>
