--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -45,7 +45,7 @@
         <a>Finalizar<i class="fa fa-arrow-right"></i></a></p>
 
 </div> -->
-<app-rpta [rpta]='rpta_modal' [rpta_si_no]='rpta_si_no' (close)=cerrarAlert($event)></app-rpta>
+<!-- <app-rpta [rpta]='rpta_modal' [rpta_si_no]='rpta_si_no' (close)=cerrarAlert($event)></app-rpta> -->
 <div class="container" style="max-width: none; height:100vh; padding-top: 20px; background-image: url('https://images.vexels.com/media/users/3/145252/raw/02dabb44e9ba039fe76c8f08dd67172a-lanzamiento-de-cohete-al-espacio-ilustracion.jpg'); background-repeat: no-repeat; background-size: cover;">
     <div class="header">
         <div class="container" style="margin: 20px;">
